crates/macros/tests/fail/fixed-layout/field-not-fixed-layout.rs
use mem_markers::FixedLayout;

#[derive(FixedLayout)]
#[repr(C)]
struct Foo {
    a: Other,
}

struct Other {}
fn main() {}
