crates/macros/tests/fail/fixed-layout/field-not-fixed-layout.stderr
error[E0277]: the trait bound `Other: mem_markers::fixed_layout::FixedLayout` is not satisfied
 --> $DIR/field-not-fixed-layout.rs:6:8
  |
3 | #[derive(FixedLayout)]
  |          ----------- required by this bound in `FooImplsFixedLayout`
4 | #[repr(C)]
5 | struct Foo {
  |        ---
6 |     a: Other,
  |        ^^^^^ the trait `mem_markers::fixed_layout::FixedLayout` is not implemented for `Other`
